# cp

./: .clang-format  .clang-tidy  .clangd  .gitignore  compile_flags.txt  stress.py  template.cpp  template2.cpp
.devcontainer/: Dockerfile
common/: aho_corasick.cpp  hashmap.cpp  inversions_do.cpp  range_fenwick.cpp
csss/: 3.cpp  4.cpp  4_2.cpp  AAp3.cpp
etc/: a.cpp  aaa.cpp  b.cpp  c.cpp  teor1.cpp  test.cpp  zzz.cpp
inno/: BAp2.cpp  a.out
itmo/: itmo3p.py
kal/: a.out  ann.cpp  slon.cpp  zalupa.cpp
lksh/: 5.cpp  8.cpp  a.out
mosh/: a.out  b.cpp  c.cpp
munik22/: a.out  d.cpp
olinf3/: D.out  a.out  ana.cpp  ana.cpp.out  bebra.cpp  bebra.py  bubblesort.cpp.out  cfgs.cpp  dbg.h  ddd.py  ddd3.py  delayed_do_assign.cpp  dijkstra.cpp  do2.cpp  doresh2.cpp  gggg.cpp  gorgifloyd.cpp  gvs.cpp.out  inssort.cpp.out  kth.cpp  kth.cpp.out  kukarek.cpp  kukarek2.cpp  qsort.cpp.out  regv.cpp  round773.cpp  sdkjasdfkasdf.cpp  sh1.cpp.out  sh2.cpp.out  sh3.cpp.out  sh4.cpp.out  shishki2.cpp  shishki3.cpp  tink.cpp  tink3.cpp  tink5.cpp  utka.cpp  zpref.cpp
olinf4/: a.out  bureacracy.cpp.out  chun.cpp.out  dd2.cpp.out  dd3.cpp  dd4.cpp.out  dd4_old.cpp  dekart.cpp  (+20 more)
prev/olinf3/: .vimspector.json  CMakeLists.txt  basic_graph.cpp  cfggg.cpp  ddd2.py  do.cpp  doresh.cpp  doresh3.cpp  eduk.cpp  eduk2.cpp  fbel.cpp  gvs.cpp  input.txt  inssort.cpp  kalzak  kalzak.cpp  main.cpp  minostov.cpp  nout.cpp  prettyprint.hpp  qsort.cpp  round772.cpp  round775.cpp  round779.cpp  sh1.cpp  sh2.cpp  sh3.cpp  sh4.cpp  shishki.cpp  sqrt.cpp  stressD.cpp  summ.cpp  tink4.cpp  tinkk.cpp
(+856 files in other folders)
